# AdventOfCode2024-in-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: AddAdventDay.cmake  AddTests.cmake  RunValgrind.cmake
profiling/: profiler.sh
solutions/: CMakeLists.txt
solutions/day_1/src/: main.cpp
solutions/day_2/include/: report.hpp
solutions/day_2/src/: main.cpp  report.cpp
solutions/day_2/tests/: main.cpp  test_report.cpp
solutions/day_3/src/: main.cpp
solutions/day_4/include/: xmas_finder.hpp
solutions/day_4/src/: main.cpp
solutions/day_4/tests/: test_xmas_finder.cpp
solutions/day_5/include/: update.hpp
solutions/day_5/src/: main.cpp  update.cpp
solutions/day_6/src/: main.cpp
solutions/day_7/include/: permutations.hpp
solutions/day_7/src/: main.cpp  permutations.cpp
solutions/day_8/src/: main.cpp
solutions/day_9/include/: disk.hpp
solutions/day_9/src/: disk.cpp  main.cpp
solutions/day_9/tests/: test_disk.cpp
